--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,5 @@
 # I/O
-INPUT_FILE_PATH
+INPUT_FILE_PATH=data/tiny.txt
 OUTPUT_FILE_PATH
 
 ########################################################################
