--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,9 +1,9 @@
 # I/O
 INPUT_FILE_PATH=data/tiny.txt
-OUTPUT_FILE_PATH=data/nano_output.txt
+OUTPUT_FILE_PATH=data/tiny_output.txt
 
 # SOLVER
-SOLVER_CLASS=edu.hust.soict.cbls.algorithm.backtrack.BackTracking
+SOLVER_CLASS=edu.hust.soict.cbls.algorithm.mip.MIP
 
 ########################################################################
 #                           ALGORITHM                                  #
