--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -9,17 +9,36 @@ SOLVER_CLASS=edu.hust.soict.cbls.algorithm.backtrack.BackTracking,edu.hust.soict
 #                           ALGORITHM                                  #
 ########################################################################
 # 1. GA
-GA_GENERATION
-GA_POPULATION_SIZE
+GA_GENERATION=
+GA_POPULATION_SIZE=
 
-GA_CROSSOVER_PROBABILITY
-GA_CROSSOVER_OPERATOR_CLASS
+GA_CROSSOVER_PROBABILITY=
+GA_CROSSOVER_OPERATOR_CLASS=
 
-GA_MUTATION_PROBABILITY
-GA_MUTATION_OPERATOR_CLASS
+GA_MUTATION_PROBABILITY=
+GA_MUTATION_OPERATOR_CLASS=
 
-GA_SELECT_PARENT_OPERATOR_CLASS
+GA_SELECT_PARENT_OPERATOR_CLASS=
 
-GA_NATURAL_SELECTION_OPERATOR_CLASS
+GA_NATURAL_SELECTION_OPERATOR_CLASS=
 
 # 2. Backtracking
+
+
+########################################################################
+#                           VISUALIZATION                              #
+########################################################################
+# 1. SINGLE INPUT, MULTI SOLVERS
+SINGLE_INPUT_NULTI_SOLVERS_CHART_TITLE=LOLOLOLOLOL
+
+# COMMON
+VISUALIZER_CLASS=\
+  edu.hust.soict.cbls.visualization.SingleInputMultiSolversViz,\
+  edu.hust.soict.cbls.visualization.SolutionDrawer
+
+VISUALIZATION_INPUT_FILE=data/small.txt
+VISUALIZATION_RESULT_FILE=data/small_output.txt
+VISUALIZATION_IMAGE_FOLDER=result/image/
+VISUALIZATION_IMAGE_FILE_NAME=input.png
+VISUALIZATION_FIGURE_WIDTH=1900
+VISUALIZATION_FIGURE_HEIGHT=1080
