--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,9 +1,11 @@
 # I/O
-INPUT_FILE_PATH=data/small.txt
-OUTPUT_FILE_PATH=data/small_output.txt
+INPUT_FILE_PATH=data/test.txt
+OUTPUT_FILE_PATH=result/text/test_output.txt
 
 # SOLVER
-SOLVER_CLASS=edu.hust.soict.cbls.algorithm.backtrack.BackTracking,edu.hust.soict.cbls.algorithm.mip.MIP
+SOLVER_CLASS=\
+  edu.hust.soict.cbls.algorithm.backtrack.BackTracking,\
+  edu.hust.soict.cbls.algorithm.mip.MIP
 
 ########################################################################
 #                           ALGORITHM                                  #
@@ -28,17 +30,14 @@ GA_NATURAL_SELECTION_OPERATOR_CLASS=
 ########################################################################
 #                           VISUALIZATION                              #
 ########################################################################
-# 1. SINGLE INPUT, MULTI SOLVERS
-SINGLE_INPUT_NULTI_SOLVERS_CHART_TITLE=LOLOLOLOLOL
 
 # COMMON
-VISUALIZER_CLASS=\
-  edu.hust.soict.cbls.visualization.SingleInputMultiSolversViz,\
-  edu.hust.soict.cbls.visualization.SolutionDrawer
+VISUALIZER_CLASS=edu.hust.soict.cbls.visualization.SolutionDrawer
 
-VISUALIZATION_INPUT_FILE=data/small.txt
-VISUALIZATION_RESULT_FILE=data/small_output.txt
+VISUALIZATION_CHART_TITLE=LOLOLOLOLOL
+VISUALIZATION_INPUT_FILE=data/test.txt
+VISUALIZATION_RESULT_FILE=result/text/test_output.txt
 VISUALIZATION_IMAGE_FOLDER=result/image/
 VISUALIZATION_IMAGE_FILE_NAME=input.png
-VISUALIZATION_FIGURE_WIDTH=1900
-VISUALIZATION_FIGURE_HEIGHT=1080
+VISUALIZATION_FIGURE_WIDTH=1200
+VISUALIZATION_FIGURE_HEIGHT=1200
