--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,11 +1,16 @@
+########################################################################
+#                           FACILITIES                                 #
+########################################################################
 # I/O
-INPUT_FILE_PATH=data/test.txt
-OUTPUT_FILE_PATH=result/text/test_output.txt
+INPUT=data
+OUTPUT=result
 
 # SOLVER
 SOLVER_CLASS=\
-  edu.hust.soict.cbls.algorithm.backtrack.BackTracking,\
-  edu.hust.soict.cbls.algorithm.mip.MIP
+  edu.hust.soict.cbls.algorithm.backtrack.BackTracking
+
+# WORKER
+WORKER_THREAD_POOL_SIZE=5
 
 ########################################################################
 #                           ALGORITHM                                  #
@@ -35,8 +40,8 @@ GA_NATURAL_SELECTION_OPERATOR_CLASS=
 VISUALIZER_CLASS=edu.hust.soict.cbls.visualization.SolutionDrawer
 
 VISUALIZATION_CHART_TITLE=LOLOLOLOLOL
-VISUALIZATION_INPUT_FILE=data/test.txt
-VISUALIZATION_RESULT_FILE=result/text/test_output.txt
+VISUALIZATION_INPUT_FILE=data/small.txt
+VISUALIZATION_RESULT_FILE=result/text/small_output.txt
 VISUALIZATION_IMAGE_FOLDER=result/image/
 VISUALIZATION_IMAGE_FILE_NAME=input.png
 VISUALIZATION_FIGURE_WIDTH=1200
