add-cbls-domain

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -16,21 +16,21 @@ WORKER_THREAD_POOL_SIZE=5
 #                           ALGORITHM                                  #
 ########################################################################
 # 1. GA
-GA_GENERATION=
-GA_POPULATION_SIZE=
+GA_GENERATION=500
+GA_POPULATION_SIZE=200
 
-GA_CROSSOVER_PROBABILITY=
+GA_CROSSOVER_PROBABILITY=0.5
 GA_CROSSOVER_OPERATOR_CLASS=
 
-GA_MUTATION_PROBABILITY=
+GA_MUTATION_PROBABILITY=0.1
 GA_MUTATION_OPERATOR_CLASS=
 
-GA_SELECT_PARENT_OPERATOR_CLASS=
+GA_SELECT_PARENT_OPERATOR_CLASS=\
+  edu.hust.soict.cbls.common.ea.ga.supported.operators.natural_selection.SimpleSelection
+GA_SELECT_PARENT_NUM_OF_PAIRS=50
+GA_SELECT_PARENT_TOURNAMENT_SIZE=5
 
 GA_NATURAL_SELECTION_OPERATOR_CLASS=
-
-# 2. Backtracking
-
 
 ########################################################################
 #                           VISUALIZATION                              #
