--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -46,3 +46,5 @@ VISUALIZATION_IMAGE_FOLDER=result/image/
 VISUALIZATION_IMAGE_FILE_NAME=input.png
 VISUALIZATION_FIGURE_WIDTH=1200
 VISUALIZATION_FIGURE_HEIGHT=1200
+
+BIG_M=5000
