ga-init-solution

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -30,7 +30,8 @@ GA_SELECT_PARENT_OPERATOR_CLASS=\
 GA_SELECT_PARENT_NUM_OF_PAIRS=50
 GA_SELECT_PARENT_TOURNAMENT_SIZE=5
 
-GA_NATURAL_SELECTION_OPERATOR_CLASS=
+GA_NATURAL_SELECTION_OPERATOR_CLASS=\
+  edu.hust.soict.cbls.common.ea.ga.supported.operators.natural_selection.SimpleSelection
 
 ########################################################################
 #                           VISUALIZATION                              #
