--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -2,31 +2,33 @@
 #                           FACILITIES                                 #
 ########################################################################
 # I/O
-INPUT=data
-OUTPUT=result
+INPUT=data/test.txt
+OUTPUT=result/test.txt
 
 # SOLVER
 SOLVER_CLASS=\
-  edu.hust.soict.cbls.algorithm.backtrack.BackTracking
+  edu.hust.soict.cbls.algorithm.ga.GASolver
 
 # WORKER
-WORKER_THREAD_POOL_SIZE=5
+WORKER_THREAD_POOL_SIZE=1
 
 ########################################################################
 #                           ALGORITHM                                  #
 ########################################################################
 # 1. GA
-GA_GENERATION=500
+GA_GENERATION=50
 GA_POPULATION_SIZE=200
 
 GA_CROSSOVER_PROBABILITY=0.5
-GA_CROSSOVER_OPERATOR_CLASS=
+GA_CROSSOVER_OPERATOR_CLASS=\
+  edu.hust.soict.cbls.algorithm.ga.operators.crossover.OuterPassengerReorderCrossover
 
 GA_MUTATION_PROBABILITY=0.1
-GA_MUTATION_OPERATOR_CLASS=
+GA_MUTATION_OPERATOR_CLASS=\
+  edu.hust.soict.cbls.algorithm.ga.operators.mutation.PassengerSwapMutation
 
 GA_SELECT_PARENT_OPERATOR_CLASS=\
-  edu.hust.soict.cbls.common.ea.ga.supported.operators.natural_selection.SimpleSelection
+  edu.hust.soict.cbls.common.ea.ga.supported.operators.select_parents.TournamentSelection
 GA_SELECT_PARENT_NUM_OF_PAIRS=50
 GA_SELECT_PARENT_TOURNAMENT_SIZE=5
 
