--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -6,8 +6,12 @@ INPUT=data/test.txt
 OUTPUT=result/test.txt
 
 # SOLVER
+# You have several following options
+## 1. edu.hust.soict.cbls.algorithm.backtrack.BackTracking
+## 2. edu.hust.soict.cbls.algorithm.ga.GASolver
+## 3. edu.hust.soict.cbls.algorithm.mip.MIP
 SOLVER_CLASS=\
-  edu.hust.soict.cbls.algorithm.ga.GASolver
+  edu.hust.soict.cbls.algorithm.mip.MIP
 
 # WORKER
 WORKER_THREAD_POOL_SIZE=1
