--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -11,7 +11,7 @@ OUTPUT=result/test.txt
 ## 2. edu.hust.soict.cbls.algorithm.ga.GASolver
 ## 3. edu.hust.soict.cbls.algorithm.mip.MIP
 SOLVER_CLASS=\
-  edu.hust.soict.cbls.algorithm.mip.MIP
+  edu.hust.soict.cbls.algorithm.ga.GASolver
 
 # WORKER
 WORKER_THREAD_POOL_SIZE=1
@@ -20,7 +20,7 @@ WORKER_THREAD_POOL_SIZE=1
 #                           ALGORITHM                                  #
 ########################################################################
 # 1. GA
-GA_GENERATION=50
+GA_GENERATION=500
 GA_POPULATION_SIZE=200
 
 GA_CROSSOVER_PROBABILITY=0.5
@@ -48,7 +48,7 @@ VISUALIZER_CLASS=edu.hust.soict.cbls.visualization.SolutionDrawer
 
 VISUALIZATION_CHART_TITLE=LOLOLOLOLOL
 VISUALIZATION_INPUT_FILE=data/small.txt
-VISUALIZATION_RESULT_FILE=result/text/small_output.txt
+VISUALIZATION_RESULT_FILE=result/small.txt
 VISUALIZATION_IMAGE_FOLDER=result/image/
 VISUALIZATION_IMAGE_FILE_NAME=input.png
 VISUALIZATION_FIGURE_WIDTH=1200
