--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -20,13 +20,15 @@ GA_GENERATION=500
 GA_POPULATION_SIZE=200
 
 GA_CROSSOVER_PROBABILITY=0.5
-GA_CROSSOVER_OPERATOR_CLASS=
+GA_CROSSOVER_OPERATOR_CLASS=\
+  edu.hust.soict.cbls.algorithm.ga.operators.crossover.OuterPassengerReorderCrossover
 
 GA_MUTATION_PROBABILITY=0.1
-GA_MUTATION_OPERATOR_CLASS=
+GA_MUTATION_OPERATOR_CLASS=\
+  edu.hust.soict.cbls.algorithm.ga.operators.mutation.PassengerSwapMutation
 
 GA_SELECT_PARENT_OPERATOR_CLASS=\
-  edu.hust.soict.cbls.common.ea.ga.supported.operators.natural_selection.SimpleSelection
+  edu.hust.soict.cbls.common.ea.ga.supported.operators.select_parents.TournamentSelection
 GA_SELECT_PARENT_NUM_OF_PAIRS=50
 GA_SELECT_PARENT_TOURNAMENT_SIZE=5
 
