--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -7,7 +7,7 @@ OUTPUT=result/small.txt
 
 # SOLVER
 SOLVER_CLASS=\
-  edu.hust.soict.cbls.algorithm.ga.GASolver
+  edu.hust.soict.cbls.algorithm.cbls.Greedy
 
 # WORKER
 WORKER_THREAD_POOL_SIZE=5
@@ -35,6 +35,15 @@ GA_SELECT_PARENT_TOURNAMENT_SIZE=5
 GA_NATURAL_SELECTION_OPERATOR_CLASS=\
   edu.hust.soict.cbls.common.ea.ga.supported.operators.natural_selection.SimpleSelection
 
+# 2. LOCAL SEARCH
+LS_MAX_STABLE=50
+LS_MAX_ITER=100
+LS_TIME_LIMIT=100
+
+# 3. MIP
+MIP_BIG_M=1e6
+MIP_EPSILON=1e-6
+
 ########################################################################
 #                           VISUALIZATION                              #
 ########################################################################
@@ -43,8 +52,8 @@ GA_NATURAL_SELECTION_OPERATOR_CLASS=\
 VISUALIZER_CLASS=edu.hust.soict.cbls.visualization.SolutionDrawer
 
 VISUALIZATION_CHART_TITLE=LOLOLOLOLOL
-VISUALIZATION_INPUT_FILE=data/small.txt
-VISUALIZATION_RESULT_FILE=result/small.txt
+VISUALIZATION_INPUT_FILE=data/medium.txt
+VISUALIZATION_RESULT_FILE=result/medium.txt
 VISUALIZATION_IMAGE_FOLDER=result/image/
 VISUALIZATION_IMAGE_FILE_NAME=input.png
 VISUALIZATION_FIGURE_WIDTH=1200
