--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -2,15 +2,17 @@
 #                           FACILITIES                                 #
 ########################################################################
 # I/O
-INPUT=data/small.txt
-OUTPUT=result/small.txt
+INPUT=data/appr/appr_20305.txt
+OUTPUT=result/text/appr/appr_20305.txt
 
 # SOLVER
 SOLVER_CLASS=\
-  edu.hust.soict.cbls.algorithm.cbls.Greedy
+  edu.hust.soict.cbls.algorithm.ga.GASolver
+#  edu.hust.soict.cbls.algorithm.cbls.Greedy,\
+#  edu.hust.soict.cbls.algorithm.cbls.LocalSearch
 
 # WORKER
-WORKER_THREAD_POOL_SIZE=5
+WORKER_THREAD_POOL_SIZE=1
 
 ########################################################################
 #                           ALGORITHM                                  #
