--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -6,10 +6,10 @@ INPUT=data/appr/appr_20305.txt
 OUTPUT=result/text/appr/appr_20305.txt
 
 # SOLVER
-SOLVER_CLASS=\
-  edu.hust.soict.cbls.algorithm.ga.GASolver
-#  edu.hust.soict.cbls.algorithm.cbls.Greedy,\
+SOLVER_CLASS=edu.hust.soict.cbls.algorithm.ga.GASolver
 #  edu.hust.soict.cbls.algorithm.cbls.LocalSearch
+#  edu.hust.soict.cbls.algorithm.ga.GASolver
+#  edu.hust.soict.cbls.algorithm.cbls.Greedy
 
 # WORKER
 WORKER_THREAD_POOL_SIZE=1
