--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -8,8 +8,8 @@ OUTPUT=result/text/appr/
 # SOLVER
 SOLVER_CLASS=\
   edu.hust.soict.cbls.algorithm.ga.GASolver,\
-  edu.hust.soict.cbls.algorithm.cbls.LocalSearch
-#  edu.hust.soict.cbls.algorithm.cbls.Greedy
+  edu.hust.soict.cbls.algorithm.cbls.LocalSearch,\
+  edu.hust.soict.cbls.algorithm.cbls.Greedy
 #  edu.hust.soict.cbls.algorithm.backtrack.BackTracking
 #  edu.hust.soict.cbls.algorithm.mip.MIP
 
@@ -20,16 +20,17 @@ WORKER_THREAD_POOL_SIZE=4
 #                           ALGORITHM                                  #
 ########################################################################
 # 1. GA
-GA_GENERATION=500
-GA_POPULATION_SIZE=200
+GA_GENERATION=1000
+GA_POPULATION_SIZE=500
 
 GA_CROSSOVER_PROBABILITY=0.5
 GA_CROSSOVER_OPERATOR_CLASS=\
   edu.hust.soict.cbls.algorithm.ga.operators.crossover.OuterPassengerReorderCrossover
 
-GA_MUTATION_PROBABILITY=0.1
+GA_MUTATION_PROBABILITY=0.1,0.5
 GA_MUTATION_OPERATOR_CLASS=\
-  edu.hust.soict.cbls.algorithm.ga.operators.mutation.PassengerSwapMutation
+  edu.hust.soict.cbls.algorithm.ga.operators.mutation.PassengerSwapMutation,\
+  edu.hust.soict.cbls.algorithm.ga.operators.mutation.CommodityMoveMutation
 
 GA_SELECT_PARENT_OPERATOR_CLASS=\
   edu.hust.soict.cbls.common.ea.ga.supported.operators.select_parents.TournamentSelection
@@ -55,7 +56,7 @@ MIP_EPSILON=1e-6
 # COMMON
 VISUALIZER_CLASS=edu.hust.soict.cbls.visualization.MultiInputMultiSolverViz
 
-VISUALIZATION_CHART_TITLE=LOLOLOLOLOL
+VISUALIZATION_CHART_TITLE=The comparison of approximate algorithms
 VISUALIZATION_INPUT_FILE=\
                     data/appr_20305.txt,\
                     data/appr_30407.txt,\
