--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -2,15 +2,15 @@
 #                           FACILITIES                                 #
 ########################################################################
 # I/O
-INPUT=data/appr/
-OUTPUT=result/text/appr/
+INPUT=data/exac/
+OUTPUT=result/text/exac/
 
 # SOLVER
 SOLVER_CLASS=\
-  edu.hust.soict.cbls.algorithm.ga.GASolver,\
-  edu.hust.soict.cbls.algorithm.cbls.LocalSearch,\
-  edu.hust.soict.cbls.algorithm.cbls.Greedy
-#  edu.hust.soict.cbls.algorithm.backtrack.BackTracking
+    edu.hust.soict.cbls.algorithm.backtrack.BackTracking
+#  edu.hust.soict.cbls.algorithm.ga.GASolver,
+#  edu.hust.soict.cbls.algorithm.cbls.LocalSearch,
+#  edu.hust.soict.cbls.algorithm.cbls.Greedy
 #  edu.hust.soict.cbls.algorithm.mip.MIP
 
 # WORKER
@@ -54,24 +54,20 @@ MIP_EPSILON=1e-6
 ########################################################################
 
 # COMMON
-VISUALIZER_CLASS=edu.hust.soict.cbls.visualization.MultiInputMultiSolverViz
+VISUALIZER_CLASS=edu.hust.soict.cbls.visualization.SolutionDrawer
 
 VISUALIZATION_CHART_TITLE=The comparison of approximate algorithms
 VISUALIZATION_INPUT_FILE=\
-                    data/appr_20305.txt,\
-                    data/appr_30407.txt,\
-                    data/appr_608010.txt,\
-                    data/appr_10012010.txt,\
-                    data/appr_20015020.txt,\
-                    data/appr_50020050.txt
+    data/exac/exac_232.txt
+#                    data/exac/exac_232.txt,\
+#                    data/exac/exac_233.txt,\
+#                    data/exac/exac_322.txt,\
 VISUALIZATION_RESULT_FILE=\
-                    result/text/appr/appr_20305.txt,\
-                    result/text/appr/appr_30407.txt,\
-                    result/text/appr/appr_608010.txt,\
-                    result/text/appr/appr_10012010.txt,\
-                    result/text/appr/appr_20015020.txt,\
-                    result/text/appr/appr_50020050.txt
+result/text/exac/exac_232.txt
+#                    result/text/exac/exac_232.txt,\
+#                    result/text/exac/exac_233.txt,\
+#                    result/text/exac/exac_322.txt,\
 VISUALIZATION_IMAGE_FOLDER=result/image/
-VISUALIZATION_IMAGE_FILE_NAME=input.png
-VISUALIZATION_FIGURE_WIDTH=1200
-VISUALIZATION_FIGURE_HEIGHT=1200
+VISUALIZATION_IMAGE_FILE_NAME=solution.png
+VISUALIZATION_FIGURE_WIDTH=1900
+VISUALIZATION_FIGURE_HEIGHT=1080
