--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -7,6 +7,7 @@ OUTPUT=result/text/exac/
 
 # SOLVER
 SOLVER_CLASS=\
+    edu.hust.soict.cbls.algorithm.mip.MIP,\
     edu.hust.soict.cbls.algorithm.backtrack.BackTracking
 #  edu.hust.soict.cbls.algorithm.ga.GASolver,
 #  edu.hust.soict.cbls.algorithm.cbls.LocalSearch,
@@ -14,7 +15,7 @@ SOLVER_CLASS=\
 #  edu.hust.soict.cbls.algorithm.mip.MIP
 
 # WORKER
-WORKER_THREAD_POOL_SIZE=4
+WORKER_THREAD_POOL_SIZE=1
 
 ########################################################################
 #                           ALGORITHM                                  #
