--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -2,36 +2,37 @@
 #                           FACILITIES                                 #
 ########################################################################
 # I/O
-INPUT=data/exac/
-OUTPUT=result/text/exac/
+INPUT=data/appr/
+OUTPUT=result/text/appr/
 
 # SOLVER
 SOLVER_CLASS=\
-    edu.hust.soict.cbls.algorithm.mip.MIP,\
-    edu.hust.soict.cbls.algorithm.backtrack.BackTracking
-#  edu.hust.soict.cbls.algorithm.ga.GASolver,
-#  edu.hust.soict.cbls.algorithm.cbls.LocalSearch,
-#  edu.hust.soict.cbls.algorithm.cbls.Greedy
+    edu.hust.soict.cbls.algorithm.cbls.LocalSearch,\
+    edu.hust.soict.cbls.algorithm.cbls.Greedy
+#    edu.hust.soict.cbls.algorithm.ga.GASolver
+#    edu.hust.soict.cbls.algorithm.backtrack.BackTracking
+#    edu.hust.soict.cbls.algorithm.mip.MIP,\
 #  edu.hust.soict.cbls.algorithm.mip.MIP
 
 # WORKER
 WORKER_THREAD_POOL_SIZE=1
+WORKER_RUN_PER_SOLVER=10
 
 ########################################################################
 #                           ALGORITHM                                  #
 ########################################################################
 # 1. GA
-GA_GENERATION=1000
+GA_GENERATION=500
 GA_POPULATION_SIZE=500
 
 GA_CROSSOVER_PROBABILITY=0.5
 GA_CROSSOVER_OPERATOR_CLASS=\
   edu.hust.soict.cbls.algorithm.ga.operators.crossover.OuterPassengerReorderCrossover
 
-GA_MUTATION_PROBABILITY=0.1,0.5
+GA_MUTATION_PROBABILITY=0.1
 GA_MUTATION_OPERATOR_CLASS=\
-  edu.hust.soict.cbls.algorithm.ga.operators.mutation.PassengerSwapMutation,\
-  edu.hust.soict.cbls.algorithm.ga.operators.mutation.CommodityMoveMutation
+  edu.hust.soict.cbls.algorithm.ga.operators.mutation.PassengerSwapMutation
+#  edu.hust.soict.cbls.algorithm.ga.operators.mutation.CommodityMoveMutation
 
 GA_SELECT_PARENT_OPERATOR_CLASS=\
   edu.hust.soict.cbls.common.ea.ga.supported.operators.select_parents.TournamentSelection
@@ -44,7 +45,7 @@ GA_NATURAL_SELECTION_OPERATOR_CLASS=\
 # 2. LOCAL SEARCH
 LS_MAX_STABLE=10
 LS_MAX_ITER=100
-LS_TIME_LIMIT=3600
+LS_TIME_LIMIT=300
 
 # 3. MIP
 MIP_BIG_M=1e6
