--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -8,8 +8,8 @@ OUTPUT=result/text/appr/
 # SOLVER
 SOLVER_CLASS=\
     edu.hust.soict.cbls.algorithm.cbls.LocalSearch,\
-    edu.hust.soict.cbls.algorithm.cbls.Greedy
-#    edu.hust.soict.cbls.algorithm.ga.GASolver
+    edu.hust.soict.cbls.algorithm.cbls.Greedy,\
+    edu.hust.soict.cbls.algorithm.ga.GASolver
 #    edu.hust.soict.cbls.algorithm.backtrack.BackTracking
 #    edu.hust.soict.cbls.algorithm.mip.MIP,\
 #  edu.hust.soict.cbls.algorithm.mip.MIP
