--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -2,8 +2,22 @@
 #                           FACILITIES                                 #
 ########################################################################
 # I/O
-INPUT=data/appr/
-OUTPUT=result/text/appr/
+INPUT=data/appr///
+OUTPUT=result/text/reprep/
+
+# SOLVER
+SOLVER_CLASS=\
+    edu.hust.soict.cbls.algorithm.cbls.LocalSearch,\
+    edu.hust.soict.cbls.algorithm.cbls.Greedy,\
+    edu.hust.soict.cbls.algorithm.ga.GASolver
+OUTPUT=result/text/reprep/
+
+# SOLVER
+SOLVER_CLASS=\
+    edu.hust.soict.cbls.algorithm.cbls.LocalSearch,\
+    edu.hust.soict.cbls.algorithm.cbls.Greedy,\
+    edu.hust.soict.cbls.algorithm.ga.GASolver
+OUTPUT=result/text/reprep/
 
 # SOLVER
 SOLVER_CLASS=\
@@ -12,11 +26,10 @@ SOLVER_CLASS=\
     edu.hust.soict.cbls.algorithm.ga.GASolver
 #    edu.hust.soict.cbls.algorithm.backtrack.BackTracking
 #    edu.hust.soict.cbls.algorithm.mip.MIP,\
-#  edu.hust.soict.cbls.algorithm.mip.MIP
 
 # WORKER
 WORKER_THREAD_POOL_SIZE=1
-WORKER_RUN_PER_SOLVER=10
+WORKER_RUN_PER_SOLVER=1
 
 ########################################################################
 #                           ALGORITHM                                  #
@@ -56,20 +69,20 @@ MIP_EPSILON=1e-6
 ########################################################################
 
 # COMMON
-VISUALIZER_CLASS=edu.hust.soict.cbls.visualization.SolutionDrawer
+VISUALIZER_CLASS=edu.hust.soict.cbls.visualization.MultiInputMultiSolverViz
 
 VISUALIZATION_CHART_TITLE=The comparison of approximate algorithms
 VISUALIZATION_INPUT_FILE=\
-    data/exac/exac_232.txt
-#                    data/exac/exac_232.txt,\
-#                    data/exac/exac_233.txt,\
-#                    data/exac/exac_322.txt,\
+    				data/exac/exac_232.txt,\
+                    data/exac/exac_233.txt,\
+                    data/exac/exac_322.txt,\
+                    data/exac/exac_433.txt
 VISUALIZATION_RESULT_FILE=\
-result/text/exac/exac_232.txt
-#                    result/text/exac/exac_232.txt,\
-#                    result/text/exac/exac_233.txt,\
-#                    result/text/exac/exac_322.txt,\
+					result/text/exac/exac_232.txt,\
+                    result/text/exac/exac_233.txt,\
+                    result/text/exac/exac_322.txt,\
+                    result/text/exac/exac_433.txt
 VISUALIZATION_IMAGE_FOLDER=result/image/
-VISUALIZATION_IMAGE_FILE_NAME=solution.png
+VISUALIZATION_IMAGE_FILE_NAME=comp.png
 VISUALIZATION_FIGURE_WIDTH=1900
 VISUALIZATION_FIGURE_HEIGHT=1080
